--- a/KingofNY/KingofNY.vcxproj.filters
+++ b/KingofNY/KingofNY.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="Map.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="json.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -74,5 +77,8 @@
     <ClCompile Include="Map.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="kingofNY.map" />
   </ItemGroup>
 </Project>
