Finaly works, missing the difference between the types of players

--- a/KingofNY/KingofNY.vcxproj
+++ b/KingofNY/KingofNY.vcxproj
@@ -151,30 +151,30 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Strategies\Moderate.h" />
-    <ClInclude Include="Strategies\Agressive.h" />
+    <ClInclude Include="Moderate.h" />
+    <ClInclude Include="Agressive.h" />
     <ClInclude Include="Card.h" />
     <ClInclude Include="Deck.h" />
     <ClInclude Include="Dice.h" />
     <ClInclude Include="GameDriver.h" />
-    <ClInclude Include="Strategies\Human.h" />
+    <ClInclude Include="Human.h" />
     <ClInclude Include="json.hpp" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Monster.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Player.h" />
-    <ClInclude Include="Strategies\Strategy.h" />
+    <ClInclude Include="Strategy.h" />
     <ClInclude Include="Tile.h" />
     <ClInclude Include="Token.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Strategies\Moderate.cpp" />
-    <ClCompile Include="Strategies\Agressive.cpp" />
+    <ClCompile Include="Moderate.cpp" />
+    <ClCompile Include="Agressive.cpp" />
     <ClCompile Include="Card.cpp" />
     <ClCompile Include="Deck.cpp" />
     <ClCompile Include="Dice.cpp" />
     <ClCompile Include="GameDriver.cpp" />
-    <ClCompile Include="Strategies\Human.cpp" />
+    <ClCompile Include="Human.cpp" />
     <ClCompile Include="KingofNY.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Monster.cpp" />
@@ -185,7 +185,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Player.cpp" />
-    <ClCompile Include="Strategies\Strategy.cpp" />
+    <ClCompile Include="Strategy.cpp" />
     <ClCompile Include="Tile.cpp" />
     <ClCompile Include="Token.cpp" />
   </ItemGroup>
