--- a/KingofNY/KingofNY.vcxproj.filters
+++ b/KingofNY/KingofNY.vcxproj.filters
@@ -54,6 +54,21 @@
     <ClInclude Include="phaseObserver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Moderate.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Agressive.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Human.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Strategy.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="statsObserver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -93,6 +108,21 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="phaseObserver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Moderate.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Agressive.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Human.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Strategy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="statsObserver.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
