--- a/KingofNY/KingofNY.vcxproj
+++ b/KingofNY/KingofNY.vcxproj
@@ -152,6 +152,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="CardObserver.h" />
+    <ClInclude Include="DiceObserver.h" />
     <ClInclude Include="Moderate.h" />
     <ClInclude Include="Agressive.h" />
     <ClInclude Include="Card.h" />
@@ -174,6 +175,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CardObserver.cpp" />
+    <ClCompile Include="DiceObserver.cpp" />
     <ClCompile Include="Moderate.cpp" />
     <ClCompile Include="Agressive.cpp" />
     <ClCompile Include="Card.cpp" />
